<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_16"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_license_plate"
            android:fontFamily="@font/svn_avo"/>
        <EditText
            android:id="@+id/edt_plate_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:textSize="@dimen/textSize16"
            android:hint="@string/enter_license_plate" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/select_duration"
        android:fontFamily="@font/svn_avo"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_32">

        <RadioButton
            android:id="@+id/rb_1month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_month"
            android:shadowColor="@color/purpil_1"/>

        <RadioButton
            android:id="@+id/rb_3month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_months" />

        <RadioButton
            android:id="@+id/rd_6month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six_months" />

    </RadioGroup>

</LinearLayout>