<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpil_5"
    tools:context=".view.fragment.main.MoreFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_200"
            android:src="@drawable/logo"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8">
            <ImageView
                android:id="@+id/iv_darkmode"
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_alignTop="@id/sc_darkmode"
                android:layout_alignBottom="@id/sc_darkmode"
                android:src="@drawable/baseline_dark_mode_24"/>
            <TextView
                android:id="@+id/tv_darkmode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/iv_darkmode"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_alignTop="@id/iv_darkmode"
                android:layout_alignBottom="@id/iv_darkmode"
                android:gravity="center_vertical"
                android:text="@string/dark_mode"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sc_darkmode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_gravity="center_horizontal" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8">
            <ImageView
                android:id="@+id/iv_language"
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/margin_16"
                android:src="@drawable/baseline_language_24"/>
            <TextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/iv_language"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_alignTop="@id/iv_language"
                android:layout_alignBottom="@id/iv_language"
                android:gravity="center_vertical"
                android:text="@string/language"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spn_language"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignTop="@id/tv_language"
                android:layout_alignBottom="@id/tv_language"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_16" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24">

        <ImageView
                android:id="@+id/iv_policy"
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/tv_policy"
                android:layout_alignBottom="@+id/tv_policy_body"
                android:layout_marginStart="@dimen/margin_16"
                android:src="@drawable/baseline_policy_24"/>
            <TextView
                android:id="@+id/tv_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_policy"
                android:layout_marginStart="@dimen/margin_8"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/terms_and_conditions"/>
            <TextView
                android:id="@+id/tv_policy_body"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/iv_policy"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_below="@+id/tv_policy"
                android:text="@string/app_terms"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16">
        <ImageView
                android:id="@+id/iv_gopy"
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/tv_gopy_title"
                android:layout_alignBottom="@+id/tv_gopy_body"
                android:layout_marginStart="@dimen/margin_16"
                android:src="@drawable/baseline_attach_email_24"/>
            <TextView
                android:id="@+id/tv_gopy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_gopy"
                android:layout_marginStart="@dimen/margin_8"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/help_improve_app"/>
            <TextView
                android:id="@+id/tv_gopy_body"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/iv_gopy"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_below="@+id/tv_gopy_title"
                android:text="@string/any_issues_or_suggestions"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16">

        <ImageView
                android:id="@+id/iv_vote"
                android:layout_width="@dimen/margin_30"
                android:layout_height="@dimen/margin_30"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/tv_vote_title"
                android:layout_alignBottom="@+id/tv_vote_body"
                android:layout_marginStart="@dimen/margin_16"
                android:src="@drawable/baseline_star_24"/>
            <TextView
                android:id="@+id/tv_vote_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_vote"
                android:layout_marginStart="@dimen/margin_8"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/rate_app"/>
            <TextView
                android:id="@+id/tv_vote_body"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/iv_vote"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_below="@+id/tv_vote_title"
                android:text="@string/rate_five_stars"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/version"
            android:gravity="center"
            android:fontFamily="@font/svn_avo"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>